toolkit/mimir/manifests/ingress/gateway.yaml
---
# Source: mimir-distributed/templates/ingress/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir-distributed-gateway
  namespace: obskit
  labels:
    app.kubernetes.io/name: mimir-distributed
    app.kubernetes.io/instance: mimir
    app.kubernetes.io/component: gateway
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: mimir.obskit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mimir-distributed-gateway
                port:
                  number: 80
  tls:
    - hosts:
        - mimir.obskit.com
      secretName: mimir-distributed-gateway-tls
